# conductor

./: API.md  DESIGN.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  openapi.json  pyproject.toml
backend/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py
backend/app/api/v1/: actions.py  auth.py  chats.py  query.py  sync.py
backend/app/google/: clients.py  fetchers.py  oauth.py
backend/app/orchestrator/: intent.py  llm.py  orchestrator.py  pipeline.py  planner.py  synthesizer.py  writes.py
backend/app/orchestrator/agents/: __init__.py  base.py  drive.py  gcal.py  gmail.py
backend/app/search/: embeddings.py  hybrid_search.py
backend/app/services/: sync.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_chats_messages.py
backend/tests/: conftest.py  test_orchestrator.py  test_units.py
docs/: ER.md  SAMPLE_QUERIES.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: Login.tsx  PendingActionCard.tsx  Sidebar.tsx  StepBadges.tsx  Toaster.tsx
