[tool.poetry]
name = "conductor-backend"
version = "0.1.0"
description = "Conductor — Agentic Google Workspace Orchestrator (backend)"
authors = ["Ankur <ankur@predli.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
greenlet = "^3.1.1"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
pgvector = "^0.3.6"
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
openai = "^1.60.0"
google-api-python-client = "^2.150.0"
google-auth = "^2.36.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
python-dateutil = "^2.9.0"
tenacity = "^9.0.0"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
